--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,7 @@
     />
 
     <head>
-        <!-- change this to your project name -->
-        <title>eframe template</title>
+        <title>Can Viewer</title>
 
         <!-- config for our rust wasm binary. go to https://trunkrs.dev/assets/#rust for more customization -->
         <link data-trunk rel="rust" data-wasm-opt="2" />
@@ -19,8 +18,6 @@
 
         <link data-trunk rel="icon" href="assets/favicon.ico" />
 
-        <link rel="manifest" href="manifest.json" />
-        <link rel="apple-touch-icon" href="assets/icon_ios_touch_192.png" />
         <meta
             name="theme-color"
             media="(prefers-color-scheme: light)"
